--- a/docs/工具软件/pm2/快速使用.md
+++ b/docs/工具软件/pm2/快速使用.md
@@ -1,11 +1,13 @@
+# 快速使用
+
 ## 介绍
 
-PM2 是一个守护进程管理器，它将帮助您管理和保持应用程序在线。 PM2 的入门非常简单，它以简单直观的 C​​LI 形式提供，可通过包管理工具安装。
+PM2 是一个守护进程管理器，它将帮助您管理和保持应用程序在线。 PM2 的入门非常简单，它以简单直观的 C​​LI 形式提供，可通过包管理工具安装。[官方文档](https://pm2.keymetrics.io/)
 
 ## 安装
 
 ::: warning
-全局安装管理进程
+一般来说都是全局安装，因为都是管理服务器上的 nodejs 进程，并非单个项目
 :::
 
 ::: code-group
