--- a/docs/工具软件/pm2/设置开机启动.md
+++ b/docs/工具软件/pm2/设置开机启动.md
@@ -1,6 +1,6 @@
-#
+# 设置开机启动
 
-## 安装 pm2-windows-service
+## 安装工具
 
 ```
 pnpm add pm2-windows-service -g
@@ -12,10 +12,14 @@ pnpm add pm2-windows-service -g
 pm2-service-install -n serviceName
 ```
 
+创建成功后会在 windows 服务中多一个名称为 serviceName 的服务名称
+
 ## 启动应用
 
+以 nodejs express 项目为例使用 www 或者使用 ecosystem.config 运行
+
 ```
-pm2 start app.js | ecosystem.config
+pm2 start ./bin/www  | ecosystem.config
 ```
 
 ## 设置 PM2_HOME 环境变量
