--- a/docs/工具软件/pm2/设置开机启动.md
+++ b/docs/工具软件/pm2/设置开机启动.md
@@ -14,26 +14,33 @@ pm2-service-install -n serviceName
 
 创建成功后会在 windows 服务中多一个名称为 serviceName 的服务名称
 
-## 启动应用
-
-以 nodejs express 项目为例使用 www 或者使用 ecosystem.config 运行
-
-```
-pm2 start ./bin/www  | ecosystem.config
-```
-
 ## 设置 PM2_HOME 环境变量
 
-::: warning
-如果不设置，默认的 pm2 save 的信息会存在用户的目录下，重启服务可能没有权限读取
-:::
 在 GUI 中添加环境变量指定路径
+![设置环境变量](/images/配置PM2_HOME环境变量.png)
+::: warning
+
+如果不设置，默认的 pm2 save 的信息会存在用户的目录下，重启服务可能没有权限读取;
+如果之前已经启动了项目，设置完环境变量之后需要重新启动
+:::
+
+## 启动应用
+
+以 nodejs express 项目为例使用 www 或者使用 [ecosystem.config.json](./启动配置文件.md) 运行
+
+```
+pm2 start ./bin/www  | ecosystem.config.json
+```
 
 ## 保存 pm2 配置信息
 
 ```
 pm2 save
 ```
+
+::: info
+使用`pm2 save`是为了把 pm2 配置信息存储在 PNPM_HOME 目录下
+:::
 
 ## 卸载服务
 
